--- a/flaskr/static/css/style.css
+++ b/flaskr/static/css/style.css
@@ -47,3 +47,12 @@ body {
     transform:translateX(25%);
   }
 }
+
+.error {
+  text-align: center;
+  display: block;
+  margin-top: 11%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
+}
