--- a/flaskr/templates/welcome.html
+++ b/flaskr/templates/welcome.html
@@ -7,7 +7,7 @@
             <p class="text-center text-light">Do you write any task, but don't have somethings write?</p>
             <div class="d-flex justify-content-between">
                 <div class="me-5">
-                    <a href="{{url_for('root')}}" class="btn btn-outline-light" tabindex="-1" role="button" aria-disabled="true">My Tasks</a>
+                    <a href="{{url_for('auth.login')}}" class="btn btn-outline-light" tabindex="-1" role="button" aria-disabled="true">My Tasks</a>
                 </div>
                 <div class="ms-5">
                     <a href="" class="btn btn-outline-light" tabindex="-1" role="button" aria-disabled="true">Write Task</a>
