--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -2,6 +2,17 @@
 
 {% block content %}
     
-    {{ username }}
-    
+<div class="row p-5">
+    {% for record in task%}
+        <div class="col-auto mt-2">
+            <div class="card text-bg-dark " style="max-width: 18rem; --bs-bg-opacity: .89;">
+                <div class="card-header">{{ record.title }}</div>
+                <div class="card-body">
+                <p class="card-text">{{ record.description }}</p>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+</div>
+
 {% endblock %}
