--- a/flaskr/templates/register.html
+++ b/flaskr/templates/register.html
@@ -5,13 +5,14 @@
         <div class="mt-3 content">
             <div class="mb-2 text-light">
                 <h5 class="text-center">Register</h5>
+                {% for messages in get_flashed_messages() %}
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                        {{messages}}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                {% endfor %}
                 <form method="POST" action="{{url_for('auth.register')}}">
                     {{ form.csrf_token }}
-                    {{ form.first_name.label(class='form-label') }}
-                    {{ form.first_name(class="form-control", placeholder="First name") }}
-    
-                    {{ form.lastname.label(class='form-label') }}
-                    {{ form.lastname(class="form-control", placeholder="Lastname") }}
     
                     {{ form.username.label(class='form-label') }}
                     {{ form.username(class="form-control", placeholder="Username") }}
@@ -21,6 +22,7 @@
     
                     {{ form.password.label(class='form-label') }}
                     {{ form.password(class="form-control", placeholder="Password") }}
+
                     <br>
                     <div class="row justify-content-evenly">
                         <div class="col">
