--- a/flaskr/templates/welcome.html
+++ b/flaskr/templates/welcome.html
@@ -7,10 +7,18 @@
             <p class="text-center text-light">Do you write any task, but don't have somethings write?</p>
             <div class="d-flex justify-content-between">
                 <div class="me-5">
-                    <a href="{{url_for('auth.login')}}" class="btn btn-outline-light" tabindex="-1" role="button" aria-disabled="true">My Tasks</a>
+                    {% if username %}
+                        <a href="{{url_for('root')}}" class="btn btn-outline-light" tabindex="-1" role="button" aria-disabled="true">My Tasks</a>
+                    {% else%}
+                        <a href="{{url_for('auth.login')}}" class="btn btn-outline-light" tabindex="-1" role="button" aria-disabled="true">My Tasks</a>
+                    {% endif %}
                 </div>
                 <div class="ms-5">
-                    <a href="" class="btn btn-outline-light" tabindex="-1" role="button" aria-disabled="true">Write Task</a>
+                    {% if username %}
+                        <a href="{{url_for('create_task')}}" class="btn btn-outline-light" tabindex="-1" role="button" aria-disabled="true">Write Task</a>
+                    {% else%}
+                        <a href="{{url_for('auth.login')}}" class="btn btn-outline-light" tabindex="-1" role="button" aria-disabled="true">Write Task</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
