Fix error in view of task

--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -11,7 +11,7 @@
                 <p class="card-text">{{ record.to_dict().description }}</p>
                 </div>
                 <div class="card-footer">
-                    <a class="btn btn-outline-light" href="{{url_for('delete', task_id=record.id)}}">delete</a
+                    <a class="btn btn-outline-light" href="{{url_for('delete', task_id=record.id)}}">delete</a>
                 </div>
             </div>
         </div>
